[package]
name = "lodestone"
version = "0.2.0"
edition = "2021"

[dependencies]
iced       = { version = "0.13", features = ["image", "svg"] }
rfd        = { version = "0.14", features = ["async-std"] }
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip        = "0.6"
toml       = "0.8"
